solve error message , footer and dark mode theme ui issues

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -344,7 +344,7 @@ section.restaurantinfo {
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
   section.restaurantinfo {
     padding: 5px 5px;
     .items {
